--- a/development.ini
+++ b/development.ini
@@ -46,11 +46,12 @@ beaker.session.secret = 517cc2e0-acc0-4791-8ad2-1c3e952d34d5
 # If you have sqlite, here's a simple default to get you started
 # in development
 
-sqlalchemy.url = postgresql://myuser:mypasswd@127.0.0.1:5432/mydb
+#sqlalchemy.url = postgresql://myuser:mypasswd@127.0.0.1:5432/mydb
+sqlalchemy.url = sqlite:///mydb.db
 #echo shouldn't be used together with the logging module.
-sqlalchemy.echo = false
-sqlalchemy.echo_pool = false
-sqlalchemy.pool_recycle = 3600
+#sqlalchemy.echo = false
+#sqlalchemy.echo_pool = false
+#sqlalchemy.pool_recycle = 3600
 
 # This line ensures that Genshi will render xhtml when sending the
 # output. Change to html or xml, as desired.
@@ -90,6 +91,10 @@ set debug = true
 #turn this setting to "min" if you would like tw to produce minified
 #javascript files (if your library supports that)
 toscawidgets.framework.resource_variant=debug
+
+# Add here the email you have in tequila in order to 
+# access the admin sections.
+admin.mails = ['yohan.jarosz@epfl.ch', ]
 
 [loggers]
 keys = root, turbotequila, sqlalchemy, auth
